--- a/news.html
+++ b/news.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>News and Updates</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>News - Ships and Stations</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Hamburger Menu -->
-  <div id="menu">
-    <span class="hamburger">☰</span>
-    <div class="menu-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="news.html">News/Updates</a>
-      <a href="https://pay.shipsandstations.com" target="_blank">Pay</a>
+    <div class="dock">
+        <button class="hamburger" onclick="toggleDock()">☰</button>
+        <nav id="dockMenu">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="news.html">News/Updates</a></li>
+                <li><a href="#">Donate/Pay</a></li>
+                <li><a href="#">Sign Up</a></li>
+            </ul>
+        </nav>
     </div>
-  </div>
-
-  <!-- Parallax Layers -->
-  <div class="parallax">
-    <div class="layer" id="stars-back"></div>
-    <div class="layer" id="stars-mid"></div>
-    <div class="layer" id="stars-front"></div>
-  </div>
-
-  <!-- Content -->
-  <div id="content">
-    <h1>News and Updates</h1>
-    <p>Stay tuned for the latest updates, patches, and game announcements!</p>
-  </div>
-
-  <script src="script.js"></script>
+    <div class="content">
+        <h1>News/Updates</h1>
+        <p>Website creation: December 5th, 2024.</p>
+        <p>Development began earlier in 2024.</p>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
