--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </div>
     <div class="content">
         <h1>About Ships and Stations</h1>
-        <p>Ships and Stations is an innovative and dynamic space exploration game where players carve their own path in a vast, player-driven universe. Unlike traditional games, there are no planets—only stations, ships, and boundless space. Players begin their journey at a Federation hub, where they receive their first personal ship and embark on a coming-of-age adventure to establish themselves as explorers, builders, or rogues.
+        <p>[Ships and Stations is an innovative and dynamic space exploration game where players carve their own path in a vast, player-driven universe. Unlike traditional games, there are no planets—only stations, ships, and boundless space. Players begin their journey at a Federation hub, where they receive their first personal ship and embark on a coming-of-age adventure to establish themselves as explorers, builders, or rogues.
 
 The game offers two main playstyles:
 
@@ -38,7 +38,7 @@ Player Interactions: Trade, barter, and raid other players, or form alliances fo
 Customizable Avatars and Ships: Tailor your character and ship with unique upgrades, outfits, and components.
 The Federation serves as a stabilizing force, offering safe hubs and resources, while rogues and NPC factions add unpredictability and challenge. Players can also participate in bounty hunting, fast travel, and large-scale logistics, contributing to a rich and immersive sandbox experience.
 
-Whether you aim to become a feared rogue, a powerful industrialist, or a Federation loyalist, Ships and Stations provides the tools and freedom to craft your own story in a universe teeming with possibilities.</p>
+Whether you aim to become a feared rogue, a powerful industrialist, or a Federation loyalist, Ships and Stations provides the tools and freedom to craft your own story in a universe teeming with possibilities.]</p>
     </div>
     <script src="script.js"></script>
 </body>
