--- a/about.html
+++ b/about.html
@@ -7,38 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="dock">
-        <button class="hamburger" onclick="toggleDock()">☰</button>
-        <nav id="dockMenu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="news.html">News/Updates</a></li>
-                <li><a href="#">Donate/Pay</a></li>
-                <li><a href="#">Sign Up</a></li>
-            </ul>
+    <div class="sidebar">
+        <div class="hamburger" onclick="toggleSidebar()">☰</div>
+        <nav class="dock">
+            <!-- Sidebar items here -->
         </nav>
+    </div>
+    <div class="top-right">
+        <button id="volume-toggle" onclick="toggleMute()">🔇</button>
     </div>
     <div class="content">
         <h1>About Ships and Stations</h1>
-        <p>[Ships and Stations is an innovative and dynamic space exploration game where players carve their own path in a vast, player-driven universe. Unlike traditional games, there are no planets—only stations, ships, and boundless space. Players begin their journey at a Federation hub, where they receive their first personal ship and embark on a coming-of-age adventure to establish themselves as explorers, builders, or rogues.
-
-The game offers two main playstyles:
-
-Rogue Raider: Focus on upgrading your personal ship to dominate the galaxy through raids and scavenging.
-Base Builder: Create sprawling stations and manufacturing empires, shaping the galaxy's economy and infrastructure.
-Players can mix both styles but must strategize carefully to manage resources and risks. Bases and stations are customizable, with modules ranging from manufacturing hubs to research labs. Defensive measures and patrols ensure security, but vigilance is key to survival.
-
-Unique features include:
-
-Dynamic Economy: Resources and items have fluctuating values, influenced by supply and demand.
-Illegal Resources: High-risk, high-reward gameplay involving rare crystals that enhance ship capabilities.
-Exploration and Combat: Mine asteroids, battle wild creature-ships, and loot wreckages in an engaging and evolving universe.
-Player Interactions: Trade, barter, and raid other players, or form alliances for mutual benefit.
-Customizable Avatars and Ships: Tailor your character and ship with unique upgrades, outfits, and components.
-The Federation serves as a stabilizing force, offering safe hubs and resources, while rogues and NPC factions add unpredictability and challenge. Players can also participate in bounty hunting, fast travel, and large-scale logistics, contributing to a rich and immersive sandbox experience.
-
-Whether you aim to become a feared rogue, a powerful industrialist, or a Federation loyalist, Ships and Stations provides the tools and freedom to craft your own story in a universe teeming with possibilities.]</p>
+        <p>[Your about section content here]</p>
     </div>
     <script src="script.js"></script>
 </body>
