--- a/news.html
+++ b/news.html
@@ -7,22 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="dock">
-        <button class="hamburger" onclick="toggleDock()">☰</button>
-        <nav id="dockMenu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="news.html">News/Updates</a></li>
-                <li><a href="#">Donate/Pay</a></li>
-                <li><a href="#">Sign Up</a></li>
-            </ul>
+    <div class="sidebar">
+        <div class="hamburger" onclick="toggleSidebar()">☰</div>
+        <nav class="dock">
+            <!-- Sidebar items here -->
         </nav>
+    </div>
+    <div class="top-right">
+        <button id="volume-toggle" onclick="toggleMute()">🔇</button>
     </div>
     <div class="content">
         <h1>News/Updates</h1>
-        <p>Website creation: December 5th, 2024.</p>
-        <p>Development began earlier in 2024.</p>
+        <ul>
+            <li>2024: Development started.</li>
+            <li>December 5th, 2024: Website went live.</li>
+        </ul>
     </div>
     <script src="script.js"></script>
 </body>
