--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sidebar Menu | CodingNepal</title>
+  <title>Ships and Stations</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Linking Google fonts for icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0">
@@ -15,7 +15,7 @@
 
   <div class="content">
     <div class="page" id="home">
-      <img src="titlelogonew.png" class = "title-image" alt="CodingNepal"></div>
+      <img src="titlelogonew.png" class = "title-image" alt="ShipsAndStations"></div>
 
     <div class="page" id="about">About</div>
 
