--- a/index.html
+++ b/index.html
@@ -15,17 +15,13 @@
 
   <div class="content">
     <div class="page" id="home">
-      <img src="titlelogonew.png" class = "title-image" alt="ShipsAndStations"></div>
+      <img src="newtitlepng.png" class = "title-image" alt="ShipsAndStations"></div>
 
     <div class="page" id="about">About</div>
 
     <div class="page" id="news">News/Updates</div>
 
     <div class="page" id="team">Team</div>
-
-    <div class="page" id="donate">Donate/Pay
-      <iframe src="https://pay.shipsandstations.com" class="iframe-content"></iframe>
-    </div>
     
   </div>
   
@@ -33,7 +29,7 @@
     <!-- Sidebar header -->
     <header class="sidebar-header">
       <a href="#" class="header-logo">
-        <img src="sh&st logo.png" alt="CodingNepal">
+        <img src="sh&st logo new.png" alt="ShipsandStations">
       </a>
       <button class="toggler sidebar-toggler">
         <span class="material-symbols-rounded">chevron_left</span>
@@ -75,8 +71,8 @@
           </a>
           <span class="nav-tooltip">Team</span>
         </li>
-        <li class="nav-item" data-page="donate">
-          <a href="#" class="nav-link">
+        <li class="nav-item">
+          <a href="https://pay.shipsandstations.com" class="nav-link">
             <span class="nav-icon material-symbols-rounded">payments
             </span>
             <span class="nav-label">Donate/Pay</span>
