--- a/index.html
+++ b/index.html
@@ -1,289 +1,108 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+<!DOCTYPE html>
+<!-- Coding by Ty Delane-->
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ships and Stations</title>
+  <link rel="stylesheet" href="styles.css">
+  <!-- Linking Google fonts for icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0">
+</head>
+<body>
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
+  <div class="background-image"></div>
 
-body {
-  min-height: 100vh;
-  background: linear-gradient(#F1FAFF, #CBE4FF);
-}
+  <div class="content">
+    <div class="page" id="home">
+      <img src="newtitlepng.png" class = "title-image" alt="ShipsAndStations"></div>
 
-.sidebar {
-  position: fixed;
-  width: 270px;
-  margin: 16px;
-  border-radius: 16px;
-  background: rgba(49, 62, 112, 0.8);
-  height: calc(100vh - 32px);
-  transition: all 0.4s ease;
-}
+    <div class="page" id="about">About</div>
 
-.sidebar.collapsed {
-  width: 85px;
-}
+    <div class="page" id="news">News/Updates</div>
 
-.sidebar .sidebar-header {
-  display: flex;
-  position: relative;
-  padding: 25px 20px;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.sidebar-header .header-logo img {
-  width: 50px;
-  height: 50px;
-  display: block;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.sidebar-header .toggler {
-  height: 35px;
-  width: 35px;
-  color: #151A2D;
-  border: none;
-  cursor: pointer;
-  display: flex;
-  background: #fff;
-  align-items: center;
-  justify-content: center;
-  border-radius: 8px;
-  transition: 0.4s ease;
-}
-
-.sidebar-header .sidebar-toggler {
-  position: absolute;
-  right: 20px;
-}
-
-.sidebar-header .menu-toggler {
-  display: none;
-}
-
-.sidebar.collapsed .sidebar-header .toggler {
-  transform: translate(-4px, 65px);
-}
-
-.sidebar-header .toggler:hover {
-  background: #dde4fb;
-}
-
-.sidebar-header .toggler span {
-  font-size: 1.75rem;
-  transition: 0.4s ease;
-}
-
-.sidebar.collapsed .sidebar-header .toggler span {
-  transform: rotate(180deg);
-}
-
-.sidebar-nav .nav-list {
-  list-style: none;
-  display: flex;
-  gap: 4px;
-  padding: 0 15px;
-  flex-direction: column;
-  transform: translateY(15px);
-  transition: 0.4s ease;
-}
-
-.sidebar.collapsed .sidebar-nav .primary-nav {
-  transform: translateY(65px);
-}
-
-.sidebar-nav .nav-link {
-  color: #fff;
-  display: flex;
-  gap: 12px;
-  white-space: nowrap;
-  border-radius: 8px;
-  padding: 12px 15px;
-  align-items: center;
-  text-decoration: none;
-  transition: 0.4s ease;
-}
-
-.sidebar.collapsed .sidebar-nav .nav-link {
-  border-radius: 12px;
-}
-
-.sidebar .sidebar-nav .nav-link .nav-label {
-  transition: opacity 0.3s ease;
-}
-
-.sidebar.collapsed .sidebar-nav .nav-link .nav-label {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.sidebar-nav .nav-link:hover {
-  color: #151A2D;
-  background: #fff;
-}
-
-.sidebar-nav .nav-item {
-  position: relative;
-}
-
-.sidebar-nav .nav-tooltip {
-  position: absolute;
-  top: -10px;
-  opacity: 0;
-  color: #151A2D;
-  display: none;
-  pointer-events: none;
-  padding: 6px 12px;
-  border-radius: 8px;
-  white-space: nowrap;
-  background: #fff;
-  left: calc(100% + 25px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  transition: 0s;
-}
-
-.sidebar.collapsed .sidebar-nav .nav-tooltip {
-  display: block;
-}
-
-.sidebar-nav .nav-item:hover .nav-tooltip {
-  opacity: 1;
-  pointer-events: auto;
-  transform: translateY(50%);
-  transition: all 0.4s ease;
-}
-
-.sidebar-nav .secondary-nav {
-  position: absolute;
-  bottom: 30px;
-  width: 100%;
-}
-
-.content {
-    position: fixed;
-    top: 0;
-    left: 85px; /* Offset for the sidebar */
-    width: calc(100% - 85px); /* Remaining space after the sidebar */
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 3rem;
-    font-family: "Poppins", sans-serif;
-    text-align: center;
-}
-
-
-.title-image {
-    position: fixed; /* Keeps the image in place even during scrolling */
-    top: 10%; /* Center vertically */
-    left: calc(49% + 55px); /* Shift 85px to the right (half of 85px in calc) */
-    transform: translate(-50%, -50%); /* Center and account for the shift */
-    max-width: 80%; /* Ensures the image doesn’t exceed container width */
-    height: auto; /* Keeps aspect ratio */
-    z-index: -1; /* Keeps it behind other elements */
-}
-
-
-/* Responsive media query code for small screens */
-@media (max-width: 805px) {
-
-    @media (max-width: 805px) {
-        .title-image {
-            position: fixed; /* Ensures it remains fixed to the viewport */
-            top:12%; /* Vertically center */
-            left: 50%; /* Horizontally center */
-            transform: translate(-50%, -50%); /* Center completely */
-            max-width: 90%; /* Ensure it scales down */
-            height: auto; /* Maintain aspect ratio */
-        }
-    }
-
-  .content {
-      left: 0;
-      width: 100%;
-      height: 100vh;
-  }
-  .sidebar {
-    height: 56px;
-    margin: 13px;
-    overflow-y: hidden;
-    scrollbar-width: none;
-    width: calc(100% - 26px);
-    max-height: calc(100vh - 26px);
-  }
-
-  .sidebar.menu-active {
-    overflow-y: auto;
-  }
-
-  .sidebar .sidebar-header {
-    position: sticky;
-    top: 0;
-    z-index: 20;
-    border-radius: 16px;
-    background: rgba(49, 62, 112, 0.0);
-    padding: 8px 10px;
-  }
-
-  .sidebar-header .sidebar-toggler,
-  .sidebar-nav .nav-item:hover .nav-tooltip {
-    display: none;
-  }
+    <div class="page" id="team">Team</div>
+    
+  </div>
   
-  .sidebar-header .menu-toggler {
-    display: flex;
-    height: 30px;
-    width: 30px;
-  }
+  <aside class="sidebar">
+    <!-- Sidebar header -->
+    <header class="sidebar-header">
+      <a href="#" class="header-logo">
+        <img src="sh&st logo new.png" alt="ShipsandStations">
+      </a>
+      <button class="toggler sidebar-toggler">
+        <span class="material-symbols-rounded">chevron_left</span>
+      </button>
+      <button class="toggler menu-toggler">
+        <span class="material-symbols-rounded">menu</span>
+      </button>
+    </header>
 
-  .sidebar-header .menu-toggler span {
-    font-size: 1.3rem;
-  }
+    <nav class="sidebar-nav">
+      <!-- Primary top nav -->
+      <ul class="nav-list primary-nav">
+        <li class="nav-item" data-page="home">
+          <a href="#" class="nav-link">
+            <span class="nav-icon material-symbols-rounded">home</span>
+            <span class="nav-label">Home
+            </span>
+          </a>
+          <span class="nav-tooltip">Dashboard</span>
+        </li>
+        <li class="nav-item" data-page="about">
+          <a href="#" class="nav-link">
+            <span class="nav-icon material-symbols-rounded">lightbulb</span>
+            <span class="nav-label">About</span>
+          </a>
+          <span class="nav-tooltip">About</span>
+        </li>
+        <li class="nav-item" data-page="news">
+          <a href="#" class="nav-link">
+            <span class="nav-icon material-symbols-rounded">news</span>
+            <span class="nav-label">News/Updates</span>
+          </a>
+          <span class="nav-tooltip">News/Updates</span>
+        </li>
+        <li class="nav-item" data-page="team">
+          <a href="#" class="nav-link">
+            <span class="nav-icon material-symbols-rounded">group</span>
+            <span class="nav-label">Team</span>
+          </a>
+          <span class="nav-tooltip">Team</span>
+        </li>
+        <li class="nav-item">
+          <a href="https://pay.shipsandstations.com" class="nav-link">
+            <span class="nav-icon material-symbols-rounded">payments
+            </span>
+            <span class="nav-label">Donate/Pay</span>
+          </a>
+          <span class="nav-tooltip">Donate/Pay</span>
+        </li>
+      </ul>
 
-  .sidebar .sidebar-nav .nav-list {
-    padding: 0 10px;
-  }
-
-  .sidebar-nav .nav-link {
-    gap: 10px;
-    padding: 10px;
-    font-size: 0.94rem;
-  }
-
-  .sidebar-nav .nav-link .nav-icon {
-    font-size: 1.37rem;
-  }
-
-  .sidebar-nav .secondary-nav {
-    position: relative;
-    bottom: 0;
-    margin: 40px 0 30px;
-  }
-}
-
-.background-image {
-    position: fixed; /* Keeps the image in place while scrolling */
-    top: 0;
-    left: 0;
-    width: 100%; /* Covers the entire width of the viewport */
-    height: 100vh; /* Covers the entire height of the viewport */
-    background-image: url('stars3.avif'); /* Your image */
-    background-size: cover; /* Ensures the image maintains its aspect ratio */
-    background-position: center; /* Centers the image */
-    background-repeat: no-repeat; /* Prevents tiling */
-    z-index: -1; /* Puts the image behind everything else */
-  }
-
-
+      <!-- Secondary bottom nav
+      <ul class="nav-list secondary-nav">
+        <li class="nav-item" data-page="">
+          <a href="#" class="nav-link">
+            <span class="nav-icon material-symbols-rounded">account_circle</span>
+            <span class="nav-label">Profile</span>
+          </a>
+          <span class="nav-tooltip">Profile</span>
+        </li>
+        <li class="nav-item" data-page="">
+          <a href="#" class="nav-link">
+            <span class="nav-icon material-symbols-rounded">logout</span>
+            <span class="nav-label">Logout</span>
+          </a>
+          <span class="nav-tooltip">Logout</span>
+        </li>
+      </ul>
+    </nav>
+  </aside>
+-->
   
-
-/* Default: Hide all pages */
-.page {
-    display: none;
-  }
+  <!-- Script -->
+  <script src="script.js"></script>
+</body>
+</html>
