--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="background"></div>
     <div class="menu-bar">
-        <button onclick="showPage('home')">News/Updates</button>
+        <button onclick="showPage('news')">News/Updates</button>
         <button onclick="showPage('about')">About</button>
-        <button onclick="showPage('services')">Home</button>
-        <button onclick="showPage('portfolio')">Team</button>
-        <button onclick="showPage('contact')">Pay/Donate</button>
+        <button onclick="showPage('home')">Home</button>
+        <button onclick="showPage('team')">Team</button>
+        <button onclick="showPage('pay')">Pay/Donate</button>
     </div>
     <div class="content">
         <img id="page-title" src="" alt="Page Title">
