--- a/Blocks/AboutBlockOne.html
+++ b/Blocks/AboutBlockOne.html
@@ -2,7 +2,7 @@
     <h1>About Ships and Stations</h1>
     <h2>This section is a work in progress as the feature set is still being refined.</h2>
     <p>
-      <strong>Ships and Stations</strong> is a sci-fi space adventure game in which players are members of a deep space colony abandoned by the rest of civilization after they were attacked by alien creatures. In an attempt to protect the homeland from the mysterious force, the portal between the two was cut off. Now, the remaining Colony Coalition struggles to maintain authority, and players are free to live life the way they see fit.
+      <strong>Ships and Stations</strong> is a sci-fi space adventure game in which players are members of a deep space colony abandoned by the rest of civilization after an attack by alien creatures. In an attempt to protect the homeland from the mysterious force, the portal between the two was cut off. Now, the remaining Colony Coalition struggles to maintain authority, and players are free to live life the way they see fit.
     </p>
 
     <h2>Getting Started</h2>
