--- a/Blocks/AboutBlockOne.html
+++ b/Blocks/AboutBlockOne.html
@@ -13,7 +13,7 @@
     <h2>Play Styles</h2>
     <ul>
       <li>
-        <strong>Base Building:</strong> Build expansive base stations that autonomously mine space resources and acquire wealth on their own. Build sentinel defensive forces that protect assets and receive real-world notifications when attacks occur. Use wealth to amass power and rise to the top.
+        <strong>Base Building:</strong> Build expansive base stations that are eventually able to autonomously mine space resources and acquire wealth on their own. Build sentinel defensive forces that protect assets and receive real-world notifications when attacks occur. Use wealth to amass power and rise to the top.
       </li>
       <li>
         <strong>Ship Building:</strong> Focus on building a ship (or ships) that outmatch all others, and use it to destroy your foes. Upgrade your engines, thrusters, shields, weapons, cargo, and more to become an unstoppable force with no spatial limitations.
