--- a/Blocks/AboutBlockOne.html
+++ b/Blocks/AboutBlockOne.html
@@ -50,7 +50,7 @@
 
     <h2>Respawning</h2>
     <p>
-      Players respawn with their money if it’s stored digitally in the Coalition Bank, which requires good standing with the Coalition. Physical credits remain at the location of death. Coalition members can quickly form groups to avenge raids by calling in patrol ships and other players. If the raider escapes, a bounty is placed on them for Coalition members.
+      Players respawn with their money if it’s stored digitally in the Coalition Bank, which requires good standing with the Coalition. Physical credits remain at the location of death. Coalition members can quickly form groups to avenge a raided member by calling in patrol ships and other players. If the raider escapes, a bounty is placed on them for Coalition members.
     </p>
 
     <h2>Economy</h2>
