--- a/Blocks/AboutBlockOne.html
+++ b/Blocks/AboutBlockOne.html
@@ -7,7 +7,7 @@
 
     <h2>Getting Started</h2>
     <p>
-      Players will begin their journey aboard a Colony Coalition station where they are brought to life as part of an initiative to grow the colony. They will choose their looks, skills, and perks, and are asked to become part of the coalition, but ultimately whether or not to do so is up to them.
+      Players will begin their journey aboard a Colony Coalition station where they are brought to life as part of an initiative to grow the colony using synthetic life generation. They will choose their looks, skills, and perks, and are asked to become part of the coalition, but ultimately whether or not to do so is up to them.
     </p>
 
     <h2>Play Styles</h2>
